--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,31 @@
 .my-sec{
     background-image: url('../images/hero_1.jpg');
-    height: 150px;
+    height: 200px;
+    background-attachment: fixed;
 }
 .my-sec1{
     background-image: url('../images/hero_2.jpg');
     height: 150px;
+}
+.my-sec-inner{
+    color: white;
+   background-color:rgba(255,0,0,0.5);
+   /* opacity: 0.5; */
+
+}
+.smi{
+    list-style-type: none;
+}
+
+.smi li{
+    display: inline-block;
+    background-color: white;
+    color: red;
+    padding: 10px 15px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.smi li a{
+    color:red
 }
